feat: adiciona as sessões de detalhes e formulário do filme.

--- a/index.html
+++ b/index.html
@@ -24,9 +24,34 @@
       </ul>
     </nav>
   </header>
+
   <main>
-    
+    <section class="details-series">
+      <h1>The Walking Dead</h1>
+
+      <div class="details-series__image">
+        <img src="assets/the_walking_dead.jpg" alt="Imagem de capa da série">
+      </div>
+    </section>
+
+    <section class="form-series">
+      <p>Avalie essa série</p>
+
+      <form>
+        <label for="user">Usuário</label>
+        <input type="text" id="user" name="user" placeholder="Digite seu nome de usuário">
+
+        <label for="comment">Comentário</label>
+        <textarea id="comment" name="comment" placeholder="Adicione um comentário"></textarea>
+
+        <label for="stars">Estrelas</label>
+        <input type="number" id="stars" name="stars">
+
+        <button>Enviar</button>
+      </form>
+    </section>
   </main>
+
   <footer>
     
   </footer>
