--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <link rel="stylesheet" href="styles/header.css">
   <link rel="stylesheet" href="styles/main.css">
   <link rel="stylesheet" href="styles/footer.css">
+  <link rel="stylesheet" href="styles/details-series.css">
+  <link rel="stylesheet" href="styles/form-series.css">
+  <link rel="stylesheet" href="styles/comments-series.css">
 
   <title>Teste</title>
 </head>
@@ -27,29 +30,47 @@
 
   <main>
     <section class="details-series">
-      <h1>The Walking Dead</h1>
+      <h1 class="details-series__title">The Walking Dead</h1>
 
       <div class="details-series__image">
         <img src="assets/the_walking_dead.jpg" alt="Imagem de capa da série">
       </div>
     </section>
 
-    <section class="form-series">
-      <p>Avalie essa série</p>
+    <div>
+      <section class="form-series">
+        <p class="form-series__paragraph">Avalie essa série</p>
+  
+        <form class="form-series__form">
+          <div class="form-series__form_container-input">
+            <label for="comment">Comentário</label>
+            <textarea id="comment" name="comment" placeholder="Adicione um comentário"></textarea>
+          </div>
+          
+          <div class="form-series__form_container-input">
+            <label for="user">Usuário</label>
+            <input type="text" id="user" name="user" placeholder="Digite seu nome de usuário">
+          </div>
+  
+          <div class="form-series__form_container-input">
+            <label for="stars">Estrelas</label>
+            <input type="number" id="stars" name="stars">
+          </div>
+  
+          <div class="form-series__form_container-button">
+            <button>Enviar</button>
+          </div>
+        </form>
+      </section>
 
-      <form>
-        <label for="user">Usuário</label>
-        <input type="text" id="user" name="user" placeholder="Digite seu nome de usuário">
+      <section class="comments-series">
+        <h3>Comentários</h3>
 
-        <label for="comment">Comentário</label>
-        <textarea id="comment" name="comment" placeholder="Adicione um comentário"></textarea>
-
-        <label for="stars">Estrelas</label>
-        <input type="number" id="stars" name="stars">
-
-        <button>Enviar</button>
-      </form>
-    </section>
+        <div>
+          <p>Testando...</p>
+        </div>
+      </section>
+    </div>
   </main>
 
   <footer>
